2009-05-25  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_init): set scroll_delay_counter and scrollbar_fade_delay
	to 0
	(hildon_pannable_area_initial_effect): avoid to compute horizontal and
	vertical scrollbar visibility, and use the data on private section instead,
	remove the initial_hint check
	(hildon_pannable_area_expose_event): add the initial_hint check here

2009-05-25  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_initial_effect): set to FALSE initial_effect
	if the fadeout effect was used
	(hildon_pannable_area_expose_event): check if it is required to
	manage the initial effect on the begining of the function. Previously
	it was made at the end, but this doesn't ensure that the scrollbars
 	will be painted on the first show. Do not set to FALSE initial_effect,
	to ensure that the initial hint is showed the first time the pannable
	becomes scrollable.
	* examples/Makefile.am
	* examples/hildon-pannable-area-initial-hint-example.c:
	New example, to show that the initial-hint is showed when the widget
	becomes scrollable

 	Fixes: NB#116607 (Pannable area should always have scrollbar visible
	initially if the application can be scrolled)

2009-05-25  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c (hildon_app_menu_repack_items):
	Resize table before adding new items to make sure that
	gtk_table_resize() is called just once.

2009-05-25  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu-private.h
	* hildon/hildon-app-menu.c (item_visibility_changed)
	(filter_visibility_changed, hildon_app_menu_show_all)
	(hildon_app_menu_hide_all, hildon_app_menu_init):
	Rearrange items just once when gtk_widget_show_all()/hide_all()
	are used.

2009-05-25  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c
	(hildon_app_menu_insert, hildon_app_menu_add_filter):
	Don't call gtk_widget_show() on added items.
